# streamlit-slickgrid

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyproject.toml.bak  setup.py
example/: requirements.txt
examples/: streamlit_app.py
streamlit_slickgrid/: __init__.py  example.py  requirements.txt
streamlit_slickgrid/frontend/: package-lock.json  package.json
streamlit_slickgrid/frontend/public/: bootstrap.min.css
streamlit_slickgrid/frontend/src/: StreamlitSlickGrid.tsx  index.tsx  style.scss
